2005-10-31  Andrew Cagney  <cagney@redhat.com>

	* TestAuxv.java: New.
	* cni/AuxvBuilder.cxx (get): New.
	(get32b, get32l, get64b, get64l): Replace get32, and get64.
	(verify): Drop wordSize parameter, use get for wordSize.
	(construct): Use a table to select the correct byte reader.
	* AuxvBuilder.java: Add bigEndian to .buildBuffer.

	* cni/slurp.hxx: Declare jbyteArray slurp(int,const char*)
	* cni/slurp.cxx: Implement.
	* cni/AuxvBuilder.cxx (construct): New, use jbyteArray slurp
	function.
	* AuxvBuilder.java: Add construct(byte[]), replace
	.buildDimensions with .buildBuffer.
	
2005-10-30  Andrew Cagney  <cagney@redhat.com>

	* AuxvBuilder.java: Rename AuxiliaryVectorBuilder.java.
	* IdBuilder.java: Rename ScanDir.java.
	* cni/AuxvBuilder.cxx: Rename cni/AuxiliaryVectorBuilder.cxx.
	* cni/IdBuilder.cxx: Rename cni/ScanDir.cxx.

	* cni/AuxiliaryVectorBuilder.cxx: 
	* AuxiliaryVectorBuilder.java: New.
	* cni/AuxiliaryVectorBuilder.cxx: New.
	* cni/slurp.hxx, cni/slurp.c (slurp): Return an int, not a long.

2005-10-09  Andrew Cagney  <cagney@redhat.com>

	* cni/ScanDir.cxx, ScanDir.java: New.

	* cni/slurp.hxx, cni/slurp.cxx: New.
	* cni/Stat.cxx: Use.

2005-10-08  Andrew Cagney  <cagney@redhat.com>

	* cni/Stat.cxx, package.html, Stat.java: New files.